# Voiant

./: .gitignore  DEPLOY.md  PROJECT_OVERVIEW.md  README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt  scratch_check_data.py  scratch_check_target.py  scratch_force_config.py  scratch_reload.py  scratch_test_recommendations.py  scratch_test_recommendations2.py
backend/app/: db.py  deps.py  main.py  runtime.py  settings.py
backend/app/agents/: .orchestrator.py.swp  _reps.py  base.py  capacity_headroom_agent.py  orchestrator.py  quota_equity_agent.py  registry.py
backend/app/api/: errors.py
backend/app/audit/: recorder.py  store.py
backend/app/config_layer/: loader.py  schema.py  store.py
backend/app/connectors/: base.py  csv_excel.py  normalize.py  registry.py  salesforce_stub.py
backend/app/domain/: enums.py  models.py
backend/app/llm/: client.py  prompts.py
backend/app/rbac/: context.py  policy.py
backend/app/schemas/: analysis.py  api.py  capacity.py  recommendations.py
backend/app/services/: analysis_service.py  dashboard_service.py  ingest_service.py
backend/app/shield/: client.py  lineage.py  masking.py  policy.py  store.py
backend/app/synth/: generator.py
backend/config/: client_rapid7.yaml
backend/config/prompts/: capacity_narrative.md  intent_classifier.md  intent_router.md  quota_equity_narrative.md  synthesis.md
backend/migrations/: README.md  env.py
backend/scripts/: generate_dataset.py  init_db.py
backend/tests/: conftest.py  test_config_and_fallback.py  test_connector_csv.py  test_engine_capacity.py  test_engine_quota_equity.py  test_orchestrator.py  test_shield_roundtrip.py
docs/: CALCULATIONS.md  (+4 more)
(+70 files in other folders)
