[project]
name = "voiant-backend"
version = "0.1.0"
description = "Voiant Sales Planning Intelligence — backend (FastAPI)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI uses Depends()/File()/Form() in argument defaults by design.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
